# SchemaScanner

./: README.md  config.ini.example  requirements.txt  setup.cfg
src/: init.py
