[metadata]
name = schema-checker-TobyWilkes
version = 0.0.1
author = Toby Wilkes
author_email = tobylwilkes@gmail.com
description = Checks differences between a folder of schemas and database schemas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src